fix: netty-handler transitive dependency vulnerabiliti